#119 Added password reset functionality through 3 security questions. Changed password update to only be accessible when signed in. Added associated tests

--- a/synapsis/src/main/resources/templates/pages/passwordUpdateForm.html
+++ b/synapsis/src/main/resources/templates/pages/passwordUpdateForm.html
@@ -5,31 +5,17 @@
 
 <div layout:fragment="content">
 
-    <form th:action="@{/passwordreset}" th:object="${registrationRequest}" method="post">
+    <form th:action="@{/passwordupdate}" th:object="${passwordUpdateRequest}" method="post">
 
         <div class="relative flex flex-col border p-8 justify-center mx-auto mt-10 shadow-xl w-1/2 mb-20">
-            <p class="font-thin text-3xl m-2 text-center text-grey">Enter your Email and your new Password</p>
+            <p class="font-thin text-3xl m-2 text-center text-grey">Enter your old password and your new password</p>
             <p th:text="${error}" class="font-light text-red-500"></p>
-            <input type="text" name="email" id="email" th:field="*{email}" placeholder="Enter Email"
+            <input type="text" name="email" id="email" th:field="*{oldPassword}" placeholder="Enter Old Password"
                    class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
 
-            <p class="mt-4">Sample 1: What was the name of your first pet?</p>
-            <input type="text" th:field="*{securityAnswer1}" placeholder="Enter your answer here"
-                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
-                   required/>
-
-            <p class="mt-4">Sample 2: What is your mother's maiden name?</p>
-            <input type="text" th:field="*{securityAnswer2}" placeholder="Enter your answer here"
-                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
-                   required/>
-
-            <p class="mt-4">Sample 3: What is the middle name of your youngest child?</p>
-            <input type="text" th:field="*{securityAnswer3}" placeholder="Enter your answer here"
-                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
-                   required/>
-
-            <input type="password" name="password" id="password" th:field="*{password}" placeholder="Enter New Password"
+            <input type="password" name="password" id="password" th:field="*{newPassword}"
+                   placeholder="Enter New Password"
                    class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
             <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm New Password"
