--- a/synapsis/src/main/resources/templates/pages/login.html
+++ b/synapsis/src/main/resources/templates/pages/login.html
@@ -69,6 +69,9 @@
                 <div class="mt-5 mb-4 text-black font-serif font-normal text-base ">
                     Don't have an account? <a th:href="@{/register}" class="text-primary">Click here</a>
                 </div>
+                <div class="mt-5 mb-4 text-black font-serif font-normal text-base ">
+                    Forgot your password? <a th:href="@{/passwordreset}" class="text-primary">Click here</a>
+                </div>
             </div>
         </div>
 
