--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -31,8 +31,9 @@
                     </table>
                 </div>
                 <form th:if="${isConnectedWith}" th:action="@{/disconnect}" method="post">
-                    <input type="hidden" name="id" th:value="${id}" />
-                    <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Disconnect</button>
+                    <input type="hidden" name="id" th:value="${id}"/>
+                    <button class="btn bg-black btn-black font-sans text-sm w-20 h-9 p-0" type="submit">Disconnect
+                    </button>
                 </form>
             </div>
         </div>
@@ -43,7 +44,7 @@
                     Edit Public Profile
                 </a>
                 <br>
-                <a th:href="@{/passwordresetpage}" class="mb-3 text-left text-xl font normal text-gray-900"> Reset
+                <a th:href="@{/passwordupdate}" class="mb-3 text-left text-xl font normal text-gray-900"> Reset
                     Password</a>
             </div>
         </div>
