--- a/synapsis/src/main/resources/templates/_layout.html
+++ b/synapsis/src/main/resources/templates/_layout.html
@@ -40,6 +40,6 @@
 </div>
 <div th:replace="fragments/footer :: footer"></div>
 
-<script src="js/index.js"></script>
+<script src="/js/index.js"></script>
 </body>
 </html>
