#117 removed dark mode

--- a/synapsis/src/main/resources/templates/pages/usersearchpage.html
+++ b/synapsis/src/main/resources/templates/pages/usersearchpage.html
@@ -3,7 +3,7 @@
       layout:decorate="_layout">
 <div layout:fragment="content">
     <div th:if="${users.size() == 0}">
-        <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+        <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50" role="alert">
             <span class="font-medium"></span> No users exists with that name !
         </div>
     </div>
