--- a/synapsis/src/main/resources/templates/pages/home.html
+++ b/synapsis/src/main/resources/templates/pages/home.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout"
+<html xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.w3.org/1999/xhtml"
       layout:decorate="_layout">
 <div layout:fragment="content">
-    <div class="container flex flex-wrap w-10/12 justify-between items-center">
+    <div sec:authorize="!isAuthenticated()">
+    <div  class="container flex flex-wrap w-10/12 justify-between items-center">
         <div class="flex-none mt-24 w-1/3">
             <div class="text-6xl text-black font-medium font-serif">
                 Your space to make connections
@@ -13,9 +14,9 @@
             <div class="text-2xl text-grey font-normal mt-8 ">
                 Sign up now to start growing your network.
             </div>
-            <button class="text-2xl btn btn-primary mt-8 ml-6">
+            <a href="/login" class="text-2xl btn btn-primary mt-8 ml-6">
                 Register
-            </button>
+            </a>
         </div>
         <div class="flex-none mt-24 w-3/5 h-full">
             <img src="../../assets/hero1.png" alt="Hero Image 1">
@@ -55,11 +56,76 @@
             <img src="../../assets/hero3.png" alt="Hero Image 3">
         </div>
         <div class="text-6xl text-primary font-medium font-serif">
-            Connect with people.
+            Connect with people
         </div>
         <button class="text-2xl w-1/3 btn btn-primary mt-8 ml-6 btn-primary">
-            Find people you know.
+            Find people you know
         </button>
     </div>
+    </div>
+
+
+    <div sec:authorize="isAuthenticated()" >
+<div class="container flex flex-wrap w-10/12 justify-between items-center">
+    <div class="flex-none mt-24 w-1/3">
+        <div class="text-6xl text-black font-medium font-serif">
+            Your space to make connections
+        </div>
+        <div class="text-2xl text-grey font-normal mt-16">
+            With synapsis you can form connections, communicate and interact with your professional network.
+        </div>
+        <div class="text-2xl text-grey font-normal mt-8 ">
+            Sign up now to start growing your network.
+        </div>
+        <button class="text-2xl btn btn-primary mt-8 ml-6">
+            Register
+        </button>
+    </div>
+    <div class="flex-none mt-24 w-3/5 h-full">
+        <img src="../../assets/hero1.png" alt="Hero Image 1">
+    </div>
+</div>
+<div class="container flex flex-wrap w-10/12 justify-between items-center">
+    <div class="flex-none mt-24 w-3/5 h-full">
+        <img src="../../assets/hero2.png" alt="Hero Image 2">
+    </div>
+    <div class="flex-none mt-24 w-1/3">
+        <div class="text-6xl text-black font-medium font-serif">
+            Find your next adventure.
+        </div>
+        <div class="text-2xl text-grey font-normal mt-16">
+            At synapsis, companies let you know the most lucrative job opportunities currently in the market.
+        </div>
+        <div class="text-2xl text-grey font-normal mt-8 ">
+            Sign up now for the next big thing in employment.
+        </div>
+        <a href="/jobs" class="text-2xl btn btn-primary mt-8 ml-6">
+            Search Jobs
+        </a>
+    </div>
+</div>
+<div class="container flex flex-wrap mt-24 w-10/12 justify-between items-center bg-primary-variant">
+    <div class="flex-none my-12 w-2/3 h-full">
+        <div class="text-7xl text-primary font-medium mx-10 font-serif">
+            Post your job opening for millions to see.
+        </div>
+    </div>
+    <button class="text-2xl btn btn-primary mx-10 btn-primary">
+        Post Your Job
+    </button>
+</div>
+<div class="container flex flex-col w-10/12 mb-24 justify-center items-center">
+    <div class="w-2/3">
+        <img src="../../assets/hero3.png" alt="Hero Image 3">
+    </div>
+    <div class="text-6xl text-primary font-medium font-serif">
+        Connect with people
+    </div>
+    <a href="/network"
+       class="text-2xl text-center w-1/3 btn btn-primary mt-8 ml-6 btn-primary">
+        Find people you know
+    </a>
+</div>
+</div>
 </div>
 </html>
