--- a/synapsis/src/main/resources/templates/pages/userpage.html
+++ b/synapsis/src/main/resources/templates/pages/userpage.html
@@ -52,7 +52,12 @@
             </div>
         </div>
     </div>
-    <div class="pl-32 mb-5  ">
+
+
+
+<div class = "flex">
+    <div class="w-1/2">
+    <div class="pl-32 mb-5 mt-12  ">
         <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
             <table>
                 <tr>
@@ -66,80 +71,113 @@
             </table>
         </div>
     </div>
+        <div class="pl-32 mb-5 ">
+            <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
+                <table>
+                    <tr>
+                        <th>
+                            <p class="text-left text-2xl ml-8 font-bold text-gray-900">Course(s)</p>
+                        </th>
+                    </tr>
+                    <td>
+                        <p class="font-normal ml-10 text-gray-700" th:text="${course}"></p>
+                    </td>
+                </table>
+            </div>
+        </div>
 
-    <div class="pl-32 mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
-            <table>
-                <tr>
-                    <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Course(s)</p>
-                    </th>
-                </tr>
-                <td>
-                    <p class="font-normal ml-10 text-gray-700" th:text="${course}"></p>
-                </td>
-            </table>
+        <div class="pl-32 mb-5 ">
+            <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
+                <table>
+                    <tr>
+                        <th>
+                            <p class="text-left text-2xl ml-8 font-bold text-gray-900">Project(s)</p>
+                        </th>
+                    </tr>
+                    <td>
+                        <p class="font-normal ml-10 text-gray-700" th:text="${project}"></p>
+                    </td>
+                </table>
+            </div>
+        </div>
+
+        <div class="pl-32 mb-5 ">
+            <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
+                <table>
+                    <tr>
+                        <th>
+                            <p class="text-left text-2xl ml-8 font-bold text-gray-900">Award(s)</p>
+                        </th>
+                    </tr>
+                    <td>
+                        <p class="font-normal ml-10 text-gray-700" th:text="${award}"></p>
+                    </td>
+                </table>
+            </div>
+        </div>
+
+        <div class="pl-32  mb-5 ">
+            <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
+                <table>
+                    <tr>
+                        <th>
+                            <p class="text-left text-2xl ml-8 font-bold text-gray-900">Skill(s)</p>
+                        </th>
+                    </tr>
+                    <td>
+                        <p class="font-normal ml-10 text-gray-700" th:text="${skill}"></p>
+                    </td>
+                </table>
+            </div>
+        </div>
+
+        <div class="pl-32 mb-44 ">
+            <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
+                <table>
+                    <tr>
+                        <th>
+                            <p class="text-left text-2xl ml-8 font-bold text-gray-900">Language(s)</p>
+                        </th>
+                    </tr>
+                    <td>
+                        <p class="font-normal ml-10 text-gray-700" th:text="${language}"></p>
+                    </td>
+                </table>
+            </div>
+        </div>
+</div>
+
+
+
+
+
+
+
+
+    <div th:if="${role.toString() =='RECRUITER'}" class="w-1/2 mt-12 ">
+        <div class="flex max-w-lg  bg-neutral-100 h-[11rem]  border-gray-200 rounded-lg shadow">
+            <a th:href="@{/createjob}">
+            <p  class = "text-xl font-normal mt-6 ml-80  text-gray-900">
+                Create a job
+            <a th:href="@{/createjob}" >
+                    <i class="fa-regular fa-square-plus"></i>
+                </a>
+            </a>
+            </p>
         </div>
     </div>
+</div>
 
-    <div class="pl-32 mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
-            <table>
-                <tr>
-                    <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Project(s)</p>
-                    </th>
-                </tr>
-                <td>
-                    <p class="font-normal ml-10 text-gray-700" th:text="${project}"></p>
-                </td>
-            </table>
-        </div>
-    </div>
 
-    <div class="pl-32 mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
-            <table>
-                <tr>
-                    <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Award(s)</p>
-                    </th>
-                </tr>
-                <td>
-                    <p class="font-normal ml-10 text-gray-700" th:text="${award}"></p>
-                </td>
-            </table>
-        </div>
-    </div>
 
-    <div class="pl-32  mb-5 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
-            <table>
-                <tr>
-                    <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Skill(s)</p>
-                    </th>
-                </tr>
-                <td>
-                    <p class="font-normal ml-10 text-gray-700" th:text="${skill}"></p>
-                </td>
-            </table>
-        </div>
-    </div>
 
-    <div class="pl-32 mb-44 ">
-        <div class="flex max-w-xl bg-neutral-100 h-[5rem] border-gray-200 rounded-lg shadow">
-            <table>
-                <tr>
-                    <th>
-                        <p class="text-left text-2xl ml-8 font-bold text-gray-900">Language(s)</p>
-                    </th>
-                </tr>
-                <td>
-                    <p class="font-normal ml-10 text-gray-700" th:text="${language}"></p>
-                </td>
-            </table>
-        </div>
-    </div>
+
+
+
+
+
+
+
+
 </div>
 </html>
