--- a/synapsis/src/main/resources/templates/pages/jobs.html
+++ b/synapsis/src/main/resources/templates/pages/jobs.html
@@ -26,10 +26,7 @@
           </div>
 
           <div class="ml-4 mr-4 mt-6 flex justify-center">
-            <form th:action="@{/job/accept}" method="post">
-              <input type="hidden" name="id" />
-              <button class="btn bg-primary btn-primary font-sans text-sm w-20 h-9 p-0" type="submit">Apply</button>
-            </form>
+            <a th:href="@{/jobapplication/{id}(id=${job.getID()})}" class="inline-block px-4 py-2 text-white bg-red-500 rounded-full">Apply</a>
           </div>
 
         </div>
