--- a/synapsis/src/main/resources/templates/pages/createJob.html
+++ b/synapsis/src/main/resources/templates/pages/createJob.html
@@ -26,7 +26,7 @@
                 class="font-thin font-serif border border-grey mt-4 p-3 mb-4 content-center rounded-md hover:bg-light"
                 required></textarea>
 
-      <label for="type" class="font-thin text-grey">Job Type</label>
+      <label for="type" class="font-thin text-grey font-serif">Job Type</label>
       <select id="type" name="type" class="mt-2 bg-white border text-sm h-14 border-grey
       text-grey rounded-md focus:border-blue-500 p-3 hover:bg-light" required>
         <option value="FULLTIME">Full-time</option>
@@ -41,6 +41,19 @@
       <input id="numAvailable" name="numAvailable" type="number" min="1" placeholder="Available Positions"
              class="font-thin font-serif border border-grey mt-4 pl-3 h-14 mb-4
              content-center rounded-md hover:bg-light" required/>
+
+      <div class="flex flex-col md:flex-row md:space-x-2">
+        <div class="flex flex-col w-full">
+          <label for="startDate" class="font-thin text-grey font-serif">Job Start Date</label>
+          <input type="date" name="startDate" id="startDate" class="font-thin font-serif border border-grey pl-3 h-14
+              mb-4 content-center rounded-md hover:bg-light text-grey uppercase" >
+        </div>
+        <div class="flex flex-col w-full">
+          <label for="endDate" class="font-thin text-grey font-serif">Job End Date</label>
+          <input type="date" name="endDate" id="endDate" class="font-thin font-serif border border-grey pl-3 h-14
+              mb-4 content-center rounded-md hover:bg-light text-grey uppercase" >
+        </div>
+      </div>
 
       <div class="border border-grey p-3 rounded-md hover:bg-light">
         <p class="text-grey font-serif">Indicate which documents are mandatory for this application</p>
@@ -62,16 +75,18 @@
         <fieldset required>
           <legend class="font-thin font-serif text-grey">Is this job hosted elsewhere?</legend>
           <div>
-            <input type="radio" name="type" id="external" />
+            <input type="radio" name="type" id="external" onclick="EnableLinkBox()"/>
             <label for="external" class="font-thin font-serif text-grey">Yes (Third Party Platform)</label>
             <br/>
 
-            <input type="radio" name="type" id="internal" />
+            <input type="radio" name="type" id="internal" onclick="EnableLinkBox()"/>
             <label for="internal" class="font-thin font-serif text-grey">No (on Synapsis)</label>
           </div>
+
+          <input id="linkbox" name="linkbox" placeholder="If yes, enter the link to the third party website" class="font-thin font-serif
+                 border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-light w-full" disabled />
         </fieldset>
       </div>
-
 
       <button type="submit" class="btn btn-primary mt-3 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
         transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Create
@@ -79,6 +94,8 @@
     </div>
 
   </form>
+
+  <script type="text/javascript" th:src="@{/js/createJob.js}"></script>
 
 </div>
 </html>
