--- a/synapsis/src/main/resources/templates/pages/job.html
+++ b/synapsis/src/main/resources/templates/pages/job.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="_layout">
+<html xmlns:th="http://thymeleaf.org" xmlns:sec="http://www.thymeleaf.org" xmlns:layout="https://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="_layout">
 <div layout:fragment="content">
 
   <div class="flex flex-col p-4 border border-light mx-auto mt-10 shadow-2xl w-2/3 mb-20 rounded-xl bg-white">
@@ -13,8 +13,8 @@
       </div>
 
       <div class="m-4 transition hover:-translate-y-0.5 duration-150">
-        <!--Add link below-->
-        <a class="p-4 bg-light text-black text-base-variant mx-auto rounded-2xl font-bold
+        <!--Only CANDIDATES can save jobs-->
+        <a th:if="${role.toString()=='CANDIDATE'}" class="p-4 bg-light text-black text-base-variant mx-auto rounded-2xl font-bold
                  hover:bg-opacity-60">Save</a>
       </div>
     </div>
@@ -55,10 +55,18 @@
 
     </div>
 
-    <div class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
+    <div th:if="${role.toString()=='CANDIDATE'}" class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
       <!--Add link below-->
-      <a class="mb-4 bg-primary text-base mx-auto p-4 rounded-2xl font-thin
+      <a class="mb-4 bg-primary text-white mx-auto p-4 rounded-2xl font-thin
             hover:bg-opacity-60">Apply Now at Synapsis</a>
+    </div>
+
+    <div th:if="${role.toString()=='RECRUITER'}" class="mx-auto my-4 transition hover:-translate-y-0.5 duration-150 ">
+    <!--Add link below. Only RECRUITERS can edit jobs.-->
+      <a th:if="${role.toString()=='RECRUITER'}" class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
+            hover:bg-opacity-60">Edit</a>
+      <a th:if="${role.toString()=='RECRUITER'}" class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
+            hover:bg-opacity-60">Delete</a>
     </div>
 
   </div>
