#136 styled both pages

--- a/synapsis/src/main/resources/templates/pages/register.html
+++ b/synapsis/src/main/resources/templates/pages/register.html
@@ -53,17 +53,17 @@
             <p class="font-thin text-center text-grey mb-2">These will be used to verify your identity in the
                 future.</p>
 
-            <p class="mt-4">Sample 1: What was the name of your first pet?</p>
+            <p class="mt-4">What was the name of your first pet?</p>
             <input type="text" th:field="*{securityAnswer1}" placeholder="Enter your answer here"
                    class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
 
-            <p class="mt-4">Sample 2: What is your mother's maiden name?</p>
+            <p class="mt-4">What is your mother's maiden name?</p>
             <input type="text" th:field="*{securityAnswer2}" placeholder="Enter your answer here"
                    class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
 
-            <p class="mt-4">Sample 3: What is the middle name of your youngest child?</p>
+            <p class="mt-4">What is the middle name of your youngest child?</p>
             <input type="text" th:field="*{securityAnswer3}" placeholder="Enter your answer here"
                    class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
