--- a/synapsis/src/main/resources/templates/pages/passwordResetForm.html
+++ b/synapsis/src/main/resources/templates/pages/passwordResetForm.html
@@ -13,22 +13,6 @@
             <input type="text" name="email" id="email" th:field="*{email}" placeholder="Enter Email"
                    class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
-
-            <p class="mt-4">Sample 1: What was the name of your first pet?</p>
-            <input type="text" th:field="*{securityAnswer1}" placeholder="Enter your answer here"
-                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
-                   required/>
-
-            <p class="mt-4">Sample 2: What is your mother's maiden name?</p>
-            <input type="text" th:field="*{securityAnswer2}" placeholder="Enter your answer here"
-                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
-                   required/>
-
-            <p class="mt-4">Sample 3: What is the middle name of your youngest child?</p>
-            <input type="text" th:field="*{securityAnswer3}" placeholder="Enter your answer here"
-                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
-                   required/>
-
             <input type="password" name="password" id="password" th:field="*{password}" placeholder="Enter New Password"
                    class="font-thin font-serif border border-grey mt-4 pl-3 h-14 content-center rounded-md hover:bg-gray-300"
                    required/>
@@ -37,6 +21,24 @@
                    th:onmouseout="check_password()" required/>
 
             <span id="mismatch_password" class="text-primary hidden">The passwords provided do not match!</span>
+
+            <p class="font-thin text-2xl text-center text-grey mt-10">Security Questions</p>
+            <p class="font-thin text-center text-grey mb-2">Please answer the following questions to verify your identity</p>
+
+            <p class="mt-4">What was the name of your first pet?</p>
+            <input type="text" th:field="*{securityAnswer1}" placeholder="Enter your answer here"
+                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
+                   required/>
+
+            <p class="mt-4">What is your mother's maiden name?</p>
+            <input type="text" th:field="*{securityAnswer2}" placeholder="Enter your answer here"
+                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
+                   required/>
+
+            <p class="mt-4">What is the middle name of your youngest child?</p>
+            <input type="text" th:field="*{securityAnswer3}" placeholder="Enter your answer here"
+                   class="font-thin font-serif border border-grey pl-3 h-14 content-center rounded-md hover:bg-gray-300"
+                   required/>
 
             <button type="submit" class="btn btn-primary mt-3 bg-primary text-base w-1/6 mx-auto p-4 rounded-2xl font-thin
                     transition hover:-translate-y-0.5 duration-150 hover:bg-opacity-60">Submit
