--- a/synapsis/src/main/resources/templates/pages/job.html
+++ b/synapsis/src/main/resources/templates/pages/job.html
@@ -65,9 +65,9 @@
     <!--Add link below. Only RECRUITERS can edit jobs.-->
       <a th:if="${authorization.toString()=='true'}" class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
             hover:bg-opacity-60">Edit</a>
-      <form th:action="@{/deletejob}" method="post">
+      <form th:action="@{/deletejob}" th:if="${authorization}" method="post">
         <input type="hidden" name="jid" th:value="${jid}" />
-        <button th:if="${authorization.toString()=='true'}" class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
+        <button class="mb-4 text-white font-thin bg-primary mx-auto p-4 rounded-2xl
               hover:bg-opacity-60" type="submit">Delete</button>
       </form>
     </div>
